<?xml version="1.0" encoding="utf-8"?>

<!-- dialog layout -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="2dip" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/process"
            android:textColor="#000000"
            android:typeface="monospace"
            android:width="60dip" />

        <EditText
            android:id="@+id/ViewProgress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:typeface="monospace"
            android:width="180dip"
            android:hint="" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="2dip" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scale"
            android:textColor="#000000"
            android:typeface="monospace"
            android:width="60dip" />

        <EditText
            android:id="@+id/ViewScale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:typeface="monospace"
            android:width="180dip" 
            android:hint=""/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="2dip" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/xPos"
            android:textColor="#000000"
            android:typeface="monospace"
            android:width="60dip" />

        <EditText
            android:id="@+id/ViewScrollX"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:typeface="monospace"
            android:width="180dip" 
            android:hint=""/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="2dip" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yPos"
            android:textColor="#000000"
            android:typeface="monospace"
            android:width="60dip" />

        <EditText
            android:id="@+id/ViewScrollY"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:typeface="monospace"
            android:width="180dip" 
            android:hint=""/>
    </LinearLayout>

</LinearLayout>